fix: 修复CollapseItem在微信小程序平台使用title插槽时宽度无法撑满的问题

--- a/src/uni_modules/elegant-wui-uni/components/wui-collapse-item/index.scss
+++ b/src/uni_modules/elegant-wui-uni/components/wui-collapse-item/index.scss
@@ -39,6 +39,10 @@
     @include when(expanded) {
       @include halfPixelBorder('bottom');
     }
+
+    @include when(custom) {
+      display: block;
+    }
   }
 
   @include e(title) {
